Add plyvel dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ repository = "https://github.com/ratson/scrapy-plyvel"
 
 [tool.poetry.dependencies]
 python = "^3.7"
+plyvel = "^1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
